--- a/template3.css
+++ b/template3.css
@@ -104,6 +104,10 @@ span a:active{
     margin-right: 30px;
 }
 
+.button1:hover{
+    background-color: #0a58ca;
+}
+
 .button1 a{
     text-decoration: none;
     color: white;
@@ -118,9 +122,18 @@ span a:active{
     border: 1px solid white;
 }
 
+.button2:hover{
+    background-color: white;
+    
+}
+
 .button2 a{
     text-decoration: none;
     color: white;
+}
+
+.button2 a:hover{
+    color: black;
 }
 
 /*CARD*/
@@ -188,6 +201,12 @@ span a:active{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #0d6efd;
+}
+
+.icon-class a:hover{
+
+    color: #0a58ca;
+    
 }
 
 /*PRICE CONTAINER*/
@@ -317,6 +336,11 @@ span a:active{
     font-size: 16px;
 }
 
+.price-button:hover{
+    background-color: #0d6efd;
+    color: white;
+}
+
 .price-button2{
 
     width: 95%;
@@ -328,6 +352,10 @@ span a:active{
     background-color: #0d6efd;
     font-size: 16px;
 
+}
+
+.price-button2:hover{
+    background-color: #0a58ca;
 }
 
 
@@ -452,13 +480,21 @@ span a:active{
     
 }
 
+.envelope-div{
+  width: max-content;
+  margin: auto;
+  
+
+}
+
 .envelope-button{
     background-color: #0d6efd;
     border-radius: 5px;
     border-style: none;
     width: 65px;
     height: 65px;
-   margin:30px 0px 0px 350px;
+   
+  
   
 }
 
