--- a/template4.css
+++ b/template4.css
@@ -96,6 +96,10 @@ span a:active{
     
 }
 
+.btn1:hover{
+    background-color: #0a58ca;
+}
+
 .btn1 a{
     text-decoration: none;
     color: white;
@@ -121,7 +125,8 @@ span a:active{
 .icon-class{
     background-color: #f8f9fa;
     margin-bottom: 50px;
-    padding: 0px 40px 35px 40px;
+    display:  inline-block;
+    padding: 0px 48px 35px 40px;
 }
 
 .icon-button{
