--- a/template-12-folder/template-12.css
+++ b/template-12-folder/template-12.css
@@ -8,8 +8,10 @@ body{
 .navbar1{
     background-color: #212529;
     overflow: hidden;
+    
    
 }
+
 
 .navtext{
     color: white;
@@ -20,13 +22,16 @@ body{
     margin-top: 15px;
 }
 .navclass{
-    width: max-content;
+   width: max-content;
    float: right;
- margin-top: -20px;
- padding:0px 150px 20px 0px;
+   margin-top: -20px;
+   padding:0px 150px 20px 0px;
+ 
   
     
 }
+
+
 
 #home{
     color: white;
@@ -43,6 +48,23 @@ span a:active{
     color: white;
 }
 
+.menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid gray;
+    border-radius: 7px;
+    padding: 6px;
+    
+  }
+
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: gray;
+    margin: 6px;}
+
+.menu-icon{display: none;}
 /* MAIN */
 
 .container{
@@ -174,3 +196,787 @@ span a:active{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
 }
+
+
+/* TABLET */
+
+@media screen and (max-width:770px) {
+
+    body{
+        margin: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+       
+    }
+    
+    .navbar1{
+        background-color: #212529;
+       
+        position: relative;
+        padding-bottom: 20px;
+        
+        
+       
+    }
+    
+    .navtext{
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: max-content;
+        padding-left: 20px;
+        font-size: 22px;
+        margin-top: 20px;
+    }
+    .navclass{
+        width: max-content;
+       float: none;
+       
+         
+       
+       
+      
+        
+    }
+
+    .nav-link{
+        
+      
+        margin: 45px 0px 0px 20px;
+        width: 50px;
+        font-size: 18px;
+        line-height: 1.8;
+        display: none;
+       
+       
+    }
+
+    .menu-icon{
+        display: inline-block;
+        float: right;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    
+    #home{
+        color: white;
+    }
+    
+    span a{
+        text-decoration: none;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-right: 15px;
+        
+        
+    }
+    
+    span a:active{
+        color: white;
+    }
+    
+    /* MAIN */
+    
+    .container{
+        max-width: 100%;
+        background:url('https://source.unsplash.com/wfh8dDlNFOk/1600x900') no-repeat center;
+        background-size: cover;
+        position: relative;
+        height: 61vh;
+    }
+    
+    .image-container{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 50%;
+        
+    }
+    
+    .image-container img{
+        border-radius: 50%;
+    }
+    
+    .headingcontainer{
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 50%;
+        z-index: 2;
+        height: auto;
+    
+    }
+    
+    .heading{
+        font-size: 28px;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
+        
+    
+    }
+    
+    .headingcontainer p{
+        color: gray;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -10px;
+    }
+    
+    /* SECOND DIV */
+    
+    .container-2{
+        max-width: 100%;
+    }
+    
+    .container-2-sub{
+        width: 95%;
+        text-align: left;
+        margin: 95px auto ;
+       
+    }
+    
+    .container-2-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-2-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-2-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    /* THIRD DIV */
+    
+    .container-3{
+        width: 100%;
+        background:url('https://source.unsplash.com/4ulffa6qoKA/1200x800') no-repeat center;
+        height: 58vh;
+        background-size: cover;
+    }
+    
+    /* FOURTH DIV */
+    
+    .container-4{
+        max-width: 100%;
+    }
+    
+    .container-4-sub{
+        width: 95%;
+        text-align: left;
+        margin: 90px auto ;
+    }
+    
+    .container-4-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-4-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-4-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding-right: 50px;
+    }
+    
+    /* FOOTER */
+    
+    .foot{
+        width: 100%;
+        background-color: #212529;
+        height: 120px;
+        text-align: center;   
+    }
+    
+    .foot h4{
+        color: white;
+        padding: 60px 0px 10px 0px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+    }
+    
+    
+}
+
+/* PHONE L */
+
+    
+@media screen and (max-width:480px) {
+
+    body{
+        margin: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+       
+    }
+    
+    .navbar1{
+        background-color: #212529;
+        overflow: hidden;
+       
+    }
+    
+    .navtext{
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: max-content;
+        
+        font-size: 22px;
+       
+    }
+    .navclass{
+        width: max-content;
+       float: none;
+    
+      
+        
+    }
+    
+    #home{
+        color: white;
+    }
+    
+    span a{
+        text-decoration: none;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-right: 15px;
+    }
+    
+    span a:active{
+        color: white;
+    }
+    
+    /* MAIN */
+    
+    .container{
+        max-width: 100%;
+        background:url('https://source.unsplash.com/wfh8dDlNFOk/1600x900') no-repeat center;
+        background-size: cover;
+        position: relative;
+        height: 61vh;
+    }
+    
+    .image-container{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 50%;
+        
+    }
+    
+    .image-container img{
+        border-radius: 50%;
+    }
+    
+    .headingcontainer{
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 50%;
+        z-index: 2;
+        height: auto;
+    
+    }
+    
+    .heading{
+        font-size: 28px;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
+        
+    
+    }
+    
+    .headingcontainer p{
+        color: gray;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -10px;
+    }
+    
+    /* SECOND DIV */
+    
+    .container-2{
+        max-width: 100%;
+    }
+    
+    .container-2-sub{
+        width: 95%;
+        text-align: left;
+        margin: 95px auto ;
+       
+    }
+    
+    .container-2-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-2-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-2-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    /* THIRD DIV */
+    
+    .container-3{
+        width: 100%;
+        background:url('https://source.unsplash.com/4ulffa6qoKA/1200x800') no-repeat center;
+        height: 58vh;
+        background-size: cover;
+    }
+    
+    /* FOURTH DIV */
+    
+    .container-4{
+        max-width: 100%;
+    }
+    
+    .container-4-sub{
+        width: 95%;
+        text-align: left;
+        margin: 90px auto ;
+    }
+    
+    .container-4-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-4-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-4-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding-right: 50px;
+    }
+    
+    /* FOOTER */
+    
+    .foot{
+        width: 100%;
+        background-color: #212529;
+        height: 120px;
+        text-align: center;   
+    }
+    
+    .foot h4{
+        color: white;
+        padding: 60px 0px 10px 0px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+    }
+    
+    
+}
+    
+/* PHONE M */
+
+  
+@media screen and (max-width:400px) {
+
+    body{
+        margin: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+       
+    }
+    
+    .navbar1{
+        background-color: #212529;
+        overflow: hidden;
+       
+    }
+    
+    .navtext{
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: max-content;
+        
+        font-size: 22px;
+        margin-top: 15px;
+    }
+    .navclass{
+        width: max-content;
+       float: none;
+     
+     
+      
+        
+    }
+    
+    #home{
+        color: white;
+    }
+    
+    span a{
+        text-decoration: none;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-right: 15px;
+    }
+    
+    span a:active{
+        color: white;
+    }
+    
+    /* MAIN */
+    
+    .container{
+        max-width: 100%;
+        background:url('https://source.unsplash.com/wfh8dDlNFOk/1600x900') no-repeat center;
+        background-size: cover;
+        position: relative;
+        height: 61vh;
+    }
+    
+    .image-container{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 50%;
+        
+    }
+    
+    .image-container img{
+        border-radius: 50%;
+    }
+    
+    .headingcontainer{
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 70%;
+        z-index: 2;
+        height: auto;
+    
+    }
+    
+    .heading{
+        font-size: 28px;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
+        
+    
+    }
+    
+    .headingcontainer p{
+        color: gray;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -10px;
+    }
+    
+    /* SECOND DIV */
+    
+    .container-2{
+        max-width: 100%;
+    }
+    
+    .container-2-sub{
+        width: 95%;
+        text-align: left;
+        margin: 95px auto ;
+       
+    }
+    
+    .container-2-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-2-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-2-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    /* THIRD DIV */
+    
+    .container-3{
+        width: 100%;
+        background:url('https://source.unsplash.com/4ulffa6qoKA/1200x800') no-repeat center;
+        height: 58vh;
+        background-size: cover;
+    }
+    
+    /* FOURTH DIV */
+    
+    .container-4{
+        max-width: 100%;
+    }
+    
+    .container-4-sub{
+        width: 95%;
+        text-align: left;
+        margin: 90px auto ;
+    }
+    
+    .container-4-sub h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        font-size: 28px;
+    }
+    
+    .container-4-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 100;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .container-4-sub p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding-right: 50px;
+    }
+    
+    /* FOOTER */
+    
+    .foot{
+        width: 100%;
+        background-color: #212529;
+        height: 120px;
+        text-align: center;   
+    }
+    
+    .foot h4{
+        color: white;
+        padding: 60px 0px 10px 0px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+    }
+    
+    
+}
+
+
+/* PHONE S */
+
+@media screen and (max-width:350px) {
+    
+
+body{
+    margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+   
+}
+
+.navbar1{
+    background-color: #212529;
+    overflow: hidden;
+   
+}
+
+.navtext{
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: max-content;
+   
+    font-size: 22px;
+    margin-top: 15px;
+}
+.navclass{
+    width: max-content;
+   float: none;
+ 
+  
+    
+}
+
+#home{
+    color: white;
+}
+
+span a{
+    text-decoration: none;
+    color: gray;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-right: 15px;
+}
+
+span a:active{
+    color: white;
+}
+
+/* MAIN */
+
+.container{
+    max-width: 100%;
+    background:url('https://source.unsplash.com/wfh8dDlNFOk/1600x900') no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 61vh;
+}
+
+.image-container{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 50%;
+    
+}
+
+.image-container img{
+    border-radius: 50%;
+}
+
+.headingcontainer{
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 70%;
+    z-index: 2;
+    height: auto;
+
+}
+
+.heading{
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    
+
+}
+
+.headingcontainer p{
+    color: gray;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -10px;
+}
+
+/* SECOND DIV */
+
+.container-2{
+    max-width: 100%;
+}
+
+.container-2-sub{
+    width: 95%;
+    text-align: left;
+    margin: 95px auto ;
+   
+}
+
+.container-2-sub h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.container-2-sub h3{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    margin-top: -10px;
+    font-size: 21px;
+}
+
+.container-2-sub p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* THIRD DIV */
+
+.container-3{
+    width: 100%;
+    background:url('https://source.unsplash.com/4ulffa6qoKA/1200x800') no-repeat center;
+    height: 58vh;
+    background-size: cover;
+}
+
+/* FOURTH DIV */
+
+.container-4{
+    max-width: 100%;
+}
+
+.container-4-sub{
+    width: 95%;
+    text-align: left;
+    margin: 90px auto ;
+}
+
+.container-4-sub h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.container-4-sub h3{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    margin-top: -10px;
+    font-size: 21px;
+}
+
+.container-4-sub p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-right: 50px;
+}
+
+/* FOOTER */
+
+.foot{
+    width: 100%;
+    background-color: #212529;
+    height: 120px;
+    text-align: center;   
+}
+
+.foot h4{
+    color: white;
+    padding: 60px 0px 10px 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+}
+
+
+}
+    
