--- a/template-5-folder/template-5.css
+++ b/template-5-folder/template-5.css
@@ -46,6 +46,24 @@ span a{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid gray;
+    border-radius: 7px;
+    padding: 6px;
+    
+  }
+
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: gray;
+    margin: 6px;}
+
+.menu-icon{display: none;}
+
 /* MAIN */
 
 .container{
@@ -199,4 +217,466 @@ span a{
     color: white;
     padding: 60px 0px 10px 0px;
     font-weight: 400;
+}
+
+
+@media screen and (max-width:770px){
+
+    body{
+        margin: 0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+       
+    }
+    
+    /* .navbar1{
+        background-color: #212529;
+        
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+      
+       
+    } */
+    
+    .navbar1{
+        background-color: black;
+        overflow: hidden;
+        position: fixed;
+       
+    }
+    
+    .navtext{
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: max-content;
+        
+        font-size: 22px;
+        margin: 15px 0px 0px 50px;
+        padding-left: 0px;
+    }
+    .navclass{
+        width: 10px;
+       float: none;
+       
+       margin: 10px 0px 0px 50px;    
+      
+        
+    }
+
+    .nav-link{
+        display: none;
+        font-size: 17px;
+        line-height: 1.8;
+    }
+
+    .menu-icon{
+        display: inline-block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    
+    
+    
+    span a:focus{
+        color: white;
+    }
+    
+    span a{
+        text-decoration: none;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-right: 12px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    
+    
+    /* MAIN */
+    
+    .container{
+        background-color: #0d6efd;
+        width: 100%;
+        position: relative;
+        height: 343px;
+        border-bottom: 1px solid #ced4da;
+        
+    }
+    
+    .container-sub{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 80%;
+        color: white;
+        
+        
+    }
+    
+    .container-sub h1{
+        font-size: 35px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    
+    .container-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 200;
+        margin-top: -20px;
+        font-size: 20px;
+    }
+    
+    .btn1{
+        background-color: white;
+        
+        
+        height: 48px;
+        width: 160px;
+        border-radius: 8px;
+        font-size: 20px;
+        margin-top: -5px;
+        border-style: none;
+        
+    }
+    
+    .btn1:hover{
+        background-color: #f8f9fa;
+    }
+    
+    .btn1 a{
+        text-decoration: none;
+        color: black;
+    }
+    
+    /* CONTAINER_2 */
+    
+    .container-2{
+        width: 100;
+        height: 520px;
+       
+    }
+    
+    .container-2-sub{
+        width: 90%;
+        margin: auto;
+        padding-top: 90px;
+    }
+    
+    .container-2-sub h1{
+        font-size: 32px;
+        font-weight: 500;
+    }
+    
+    .container-2-sub h4{
+        font-size: 20px;
+        font-weight: 300;
+        margin-top: -11px;
+    }
+    
+    .container-2-sub ul{
+        font-size: 16px;
+        margin-top: -5px;
+    }
+    
+    /* CONTAINER 3 */
+    
+    .container-3{
+        width: 100;
+        height: 350px;
+        background-color: #f8f9fa;
+       
+    }
+    
+    .container-3-sub{
+        width: 90%;
+        margin: auto;
+        padding-top: 85px;
+    }
+    
+    .container-3-sub h1{
+        font-size: 32px;
+        font-weight: 500;
+    }
+    
+    .container-3-sub h4{
+        font-size: 21px;
+        font-weight: 300;
+        margin-top: -11px;
+    }
+    
+    /* CONTAINER 4 */
+    
+    .container-4{
+        width: 100;
+        height: 350px;
+        
+       
+    }
+    
+    .container-4-sub{
+        width: 90%;
+        margin: auto;
+        padding-top: 85px;
+    }
+    
+    .container-4-sub h1{
+        font-size: 32px;
+        font-weight: 500;
+    }
+    
+    .container-4-sub h4{
+        font-size: 20px;
+        font-weight: 300;
+        margin-top: -11px;
+    }
+    
+    /*FOOTER*/
+    
+    
+    .foot{
+        width: 100%;
+        background-color: #212529;
+        height: 120px;
+        text-align: center;   
+    }
+    
+    .foot h4{
+        color: white;
+        padding: 60px 0px 10px 0px;
+        font-weight: 400;
+    }
+    
+}
+
+
+@media screen and (max-width:600px){
+
+    body{
+        margin: 0;
+        box-sizing: border-box;
+       
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+       
+    }
+    
+    .navbar1{
+        background-color: black;
+        overflow: hidden;
+        position: fixed;
+       
+    }
+    
+    .navtext{
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        width: max-content;
+        
+        font-size: 22px;
+        margin: 15px 0px 0px 50px;
+        padding-left: 0px;
+    }
+    .navclass{
+        width: 10px;
+       float: none;
+       
+       margin: 10px 0px 0px 50px;    
+      
+        
+    }
+
+    .nav-link{
+        display: none;
+        font-size: 17px;
+        line-height: 1.8;
+      
+    }
+
+    .menu-icon{
+        display: inline-block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      
+    }
+    span a:focus{
+        color: white;
+    }
+    
+    span a{
+        text-decoration: none;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding-right: 12px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+   
+    
+    /* MAIN */
+    
+    .container{
+       
+        background-color: #0d6efd;
+        width: 100%;
+        position: relative;
+        height: 355px;
+        border-bottom: 1px solid #ced4da;
+        padding: 55px 0px;
+        
+    }
+    
+    .container-sub{
+        position: absolute;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+        text-align: center;
+        width: 75%;
+        color: white;
+        
+        
+    }
+    
+    .container-sub h1{
+        font-size: 28px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 1.2;
+    }
+    
+    .container-sub h3{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 200;
+        margin-top: -10px;
+        font-size: 21px;
+    }
+    
+    .btn1{
+        background-color: white;
+        
+        
+        height: 48px;
+        width: 160px;
+        border-radius: 8px;
+        font-size: 20px;
+        margin-top: 0px;
+        border-style: none;
+        
+    }
+    
+    .btn1:hover{
+        background-color: #f8f9fa;
+    }
+    
+    .btn1 a{
+        text-decoration: none;
+        color: black;
+    }
+    
+    /* CONTAINER_2 */
+    
+    .container-2{
+        width: 100%;
+        height: auto;
+       
+    }
+    
+    .container-2-sub{
+        width: 80%;
+        margin: auto;
+        padding: 120px 0px 120px 0px;
+    }
+    
+    .container-2-sub h1{
+        font-size: 25px;
+        font-weight: 500;
+    }
+    
+    .container-2-sub h4{
+        font-size: 22px;
+        font-weight: 300;
+        margin-top: -11px;
+       
+    }
+    
+    .container-2-sub ul{
+        font-size: 16px;
+        margin-top: -5px;
+    }
+    
+    /* CONTAINER 3 */
+    
+    .container-3{
+        width: 100;
+        height: auto;
+        background-color: #f8f9fa;
+       
+    }
+    
+    .container-3-sub{
+        width: 90%;
+        margin: auto;
+        padding: 100px 0px 100px 0px;
+    }
+    
+    .container-3-sub h1{
+        font-size: 26px;
+        font-weight: 500;
+    }
+    
+    .container-3-sub h4{
+        font-size: 22px;
+        font-weight: 300;
+        margin-top: -11px;
+        padding: 0px 20px 0px 0px;
+    }
+    
+    /* CONTAINER 4 */
+    
+    .container-4{
+        width: 100;
+        height: auto;
+        
+       
+    }
+    
+    .container-4-sub{
+        width: 85%;
+        margin: auto;
+        padding: 120px 0px 110px 0px;
+    }
+    
+    .container-4-sub h1{
+        font-size: 26px;
+        font-weight: 500;
+    }
+    
+    .container-4-sub h4{
+        font-size: 22px;
+        font-weight: 300;
+        margin-top: -11px;
+        padding: 0px 20px 0px 0px;
+    }
+    
+    /*FOOTER*/
+    
+    
+    .foot{
+        width: 100%;
+        background-color: #212529;
+        height: 120px;
+        text-align: center; 
+        
+       
+    }
+    
+    .foot h4{
+        color: white;
+        padding: 60px 0px 10px 0px;
+        font-weight: 400;
+    }
+    
 }
